--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
                             <img src="res/images/me.png" id="picture" alt="My picture">
                         </div>
                         <div class="info">
-                            <ul>
-                                <li id="name">John Doe</li>
-                                <li id="birthdate">11/10/1990</li>
-                                <li id="faculty">Software Engineering</li>
+                            <ul id="profile-info">
+                                <li id="name"></li>
+                                <li id="birthdate"></li>
+                                <li id="faculty"></li>
                             </ul>
                         </div>
                         <div id="gpa">
-                            <strong>2.75</strong>
                         </div>
                         <div class="clear-fix"></div>
                     </div>
@@ -47,31 +46,8 @@
                             <th>Grade</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Agile software development</td>
-                            <td>1</td>
-                            <td>82</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>System modeling</td>
-                            <td>1</td>
-                            <td>85</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Object-oriented programming</td>
-                            <td>2</td>
-                            <td>99</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Estonian language Level A2</td>
-                            <td>2</td>
-                            <td>65</td>
-                        </tr>
+                        <tbody id="courses-list">
+
                         </tbody>
                     </table>
                     <br>
